# rust-remote-control

./: .gitignore  Cargo.toml  README.md  test.html
command_handler/: Cargo.toml
command_handler/scripts/: ToggleLaptopScreen.sh
command_handler/src/: lib.rs
web_server/: Cargo.toml
web_server/assets/css/: style.css
web_server/assets/html/: index.html  not_found.html
web_server/assets/js/: crypto.js  encryption.js  request_handling.js
web_server/src/: lib.rs  main.rs
