[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
command_handler = {path = "../command_handler" }
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
askama = "0.12.1"
tower-http = {version = "0.5.2", features = ["fs"]}
aes-gcm = "0.10.3"
sha2 = "0.10.8"
pbkdf2={version = "0.12.2", features = ["simple"]}
generic-array = "1.0.0"
rand_core = "0.6.4"
